--- a/src/gui/widgets/btcconnectdlg.ui
+++ b/src/gui/widgets/btcconnectdlg.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Connect to Bitcoin client</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
