--- a/src/gui/widgets/btcpoolmanager.ui
+++ b/src/gui/widgets/btcpoolmanager.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>546</width>
-    <height>441</height>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>90</y>
-     <width>231</width>
+     <y>50</y>
+     <width>241</width>
      <height>141</height>
     </rect>
    </property>
@@ -27,7 +27,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>60</y>
+     <y>20</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -40,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>280</y>
+     <y>240</y>
      <width>221</width>
      <height>27</height>
     </rect>
@@ -53,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>240</y>
+     <y>200</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -66,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>240</y>
+     <y>200</y>
      <width>93</width>
      <height>27</height>
     </rect>
@@ -78,8 +78,8 @@
   <widget class="QListWidget" name="listServers">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>90</y>
+     <x>300</x>
+     <y>50</y>
      <width>221</width>
      <height>141</height>
     </rect>
@@ -88,8 +88,8 @@
   <widget class="QLabel" name="labelServers">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>60</y>
+     <x>300</x>
+     <y>20</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -102,13 +102,153 @@
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>60</y>
+     <y>20</y>
      <width>151</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>300</y>
+     <width>71</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Balance:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>280</y>
+     <width>101</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Client name:</string>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="spinAmount">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>420</y>
+     <width>141</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>8</number>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonRequestPayout">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>390</y>
+     <width>141</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Request payout</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelClientName">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>280</y>
+     <width>131</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>n/a</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalance">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>300</y>
+     <width>141</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0.0</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="editToAddress">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>420</y>
+     <width>331</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>400</y>
+     <width>91</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>To address</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>330</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Deposit address:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="editDepositAddr">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>320</y>
+     <width>331</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonRequestDeposit">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>350</y>
+     <width>221</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Request new deposit address</string>
    </property>
   </widget>
  </widget>
