--- a/src/gui/widgets/btcsenddlg.ui
+++ b/src/gui/widgets/btcsenddlg.ui
@@ -16,8 +16,8 @@
   <widget class="QDoubleSpinBox" name="spinBoxAmount">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>105</y>
+     <x>80</x>
+     <y>75</y>
      <width>131</width>
      <height>27</height>
     </rect>
@@ -38,23 +38,23 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>110</y>
-     <width>111</width>
+     <x>20</x>
+     <y>80</y>
+     <width>51</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Amount to send</string>
+    <string>Amount</string>
    </property>
   </widget>
   <widget class="QPushButton" name="buttonSend">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>160</y>
+     <x>250</x>
+     <y>80</y>
      <width>141</width>
-     <height>27</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -65,7 +65,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>235</y>
+     <y>200</y>
      <width>671</width>
      <height>27</height>
     </rect>
@@ -75,7 +75,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>205</y>
+     <y>170</y>
      <width>111</width>
      <height>17</height>
     </rect>
@@ -87,8 +87,8 @@
   <widget class="QLineEdit" name="editAddress">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>70</y>
+     <x>80</x>
+     <y>15</y>
      <width>331</width>
      <height>27</height>
     </rect>
@@ -100,14 +100,14 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>40</y>
-     <width>161</width>
+     <x>20</x>
+     <y>20</y>
+     <width>51</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Address to send to</string>
+    <string>Address</string>
    </property>
   </widget>
   <widget class="QScrollArea" name="scrollArea">
@@ -172,7 +172,7 @@
           <rect>
            <x>20</x>
            <y>160</y>
-           <width>661</width>
+           <width>671</width>
            <height>84</height>
           </rect>
          </property>
@@ -254,7 +254,7 @@
           <rect>
            <x>20</x>
            <y>290</y>
-           <width>611</width>
+           <width>621</width>
            <height>131</height>
           </rect>
          </property>
@@ -262,7 +262,7 @@
         <widget class="QPlainTextEdit" name="textVout">
          <property name="geometry">
           <rect>
-           <x>640</x>
+           <x>650</x>
            <y>290</y>
            <width>41</width>
            <height>131</height>
@@ -316,7 +316,7 @@
           <rect>
            <x>20</x>
            <y>500</y>
-           <width>611</width>
+           <width>621</width>
            <height>191</height>
           </rect>
          </property>
@@ -344,7 +344,7 @@
           </rect>
          </property>
          <property name="text">
-          <string>scriptPubKeys:</string>
+          <string>scriptPubKeys</string>
          </property>
         </widget>
         <widget class="QPlainTextEdit" name="textScriptPubKeys">
@@ -352,7 +352,7 @@
           <rect>
            <x>20</x>
            <y>730</y>
-           <width>611</width>
+           <width>621</width>
            <height>101</height>
           </rect>
          </property>
@@ -367,7 +367,7 @@
           </rect>
          </property>
          <property name="text">
-          <string>redeemScripts:</string>
+          <string>redeemScripts</string>
          </property>
         </widget>
         <widget class="QPlainTextEdit" name="textRedeemScripts">
@@ -375,7 +375,7 @@
           <rect>
            <x>20</x>
            <y>860</y>
-           <width>611</width>
+           <width>621</width>
            <height>111</height>
           </rect>
          </property>
@@ -409,9 +409,9 @@
         <widget class="QPlainTextEdit" name="textRawTxSigned">
          <property name="geometry">
           <rect>
-           <x>30</x>
+           <x>20</x>
            <y>1050</y>
-           <width>611</width>
+           <width>621</width>
            <height>311</height>
           </rect>
          </property>
@@ -515,9 +515,9 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>70</y>
-     <width>321</width>
+     <x>80</x>
+     <y>45</y>
+     <width>331</width>
      <height>27</height>
     </rect>
    </property>
@@ -528,9 +528,9 @@
   <widget class="QLabel" name="label_14">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>40</y>
-     <width>62</width>
+     <x>20</x>
+     <y>50</y>
+     <width>41</width>
      <height>17</height>
     </rect>
    </property>
@@ -541,9 +541,9 @@
   <widget class="QDoubleSpinBox" name="spinBoxFee">
    <property name="geometry">
     <rect>
-     <x>420</x>
+     <x>80</x>
      <y>105</y>
-     <width>111</width>
+     <width>131</width>
      <height>27</height>
     </rect>
    </property>
@@ -553,6 +553,12 @@
    <property name="decimals">
     <number>8</number>
    </property>
+   <property name="maximum">
+    <double>0.100000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>0.000100000000000</double>
+   </property>
    <property name="value">
     <double>0.001000000000000</double>
    </property>
@@ -560,7 +566,7 @@
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>20</x>
      <y>110</y>
      <width>31</width>
      <height>17</height>
@@ -573,14 +579,131 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>140</y>
-     <width>131</width>
+     <x>440</x>
+     <y>60</y>
+     <width>81</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Spendable balance</string>
+    <string>Confirmed</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>90</y>
+     <width>62</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pending</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>30</y>
+     <width>62</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Wallet</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>30</y>
+     <width>71</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Watchonly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceC">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>60</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceWatC">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>60</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceP">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>90</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceWatP">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>90</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>60</y>
+     <width>31</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BTC</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>90</y>
+     <width>31</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BTC</string>
    </property>
   </widget>
   <zorder>scrollArea</zorder>
@@ -596,6 +719,15 @@
   <zorder>spinBoxFee</zorder>
   <zorder>label_16</zorder>
   <zorder>label_2</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_18</zorder>
+  <zorder>label_19</zorder>
+  <zorder>labelBalanceC</zorder>
+  <zorder>labelBalanceWatC</zorder>
+  <zorder>labelBalanceP</zorder>
+  <zorder>labelBalanceWatP</zorder>
+  <zorder>label_20</zorder>
+  <zorder>label_22</zorder>
  </widget>
  <resources/>
  <connections/>
