--- a/src/gui/widgets/btctransactionmanager.ui
+++ b/src/gui/widgets/btctransactionmanager.ui
@@ -68,7 +68,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Latest Bitcoin transactions:</string>
+    <string>Latest Bitcoin transactions</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -81,7 +81,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Latest pool transactions:</string>
+    <string>Latest pool transactions</string>
    </property>
   </widget>
   <widget class="QTableWidget" name="tableTxPool">
@@ -122,9 +122,9 @@
   <widget class="QPushButton" name="buttonRefresh">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>480</y>
-     <width>151</width>
+     <x>820</x>
+     <y>10</y>
+     <width>161</width>
      <height>27</height>
     </rect>
    </property>
@@ -135,8 +135,8 @@
   <widget class="QLineEdit" name="editTxCount">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>440</y>
+     <x>610</x>
+     <y>15</y>
      <width>113</width>
      <height>27</height>
     </rect>
@@ -148,14 +148,14 @@
   <widget class="QLabel" name="labelTxCount">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>410</y>
+     <x>380</x>
+     <y>20</y>
      <width>231</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Number of transactions to display:</string>
+    <string>Number of transactions to display</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="editSearchTx">
@@ -173,12 +173,12 @@
     <rect>
      <x>530</x>
      <y>540</y>
-     <width>151</width>
+     <width>71</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Look up txid:</string>
+    <string>Enter txid</string>
    </property>
   </widget>
   <widget class="QPushButton" name="buttonSearchTx">
@@ -192,6 +192,136 @@
    </property>
    <property name="text">
     <string>Show details</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>440</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Confirmed</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceC">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>440</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceWatC">
+   <property name="geometry">
+    <rect>
+     <x>840</x>
+     <y>440</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceP">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>470</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>470</y>
+     <width>62</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pending</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>440</y>
+     <width>31</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BTC</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>860</x>
+     <y>410</y>
+     <width>71</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Watchonly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelBalanceWatP">
+   <property name="geometry">
+    <rect>
+     <x>840</x>
+     <y>470</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>000.00000000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>410</y>
+     <width>62</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Wallet</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>470</y>
+     <width>31</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BTC</string>
    </property>
   </widget>
  </widget>
