--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -38,5 +38,8 @@
         <file>icons/safe.png</file>
         <file>icons/buildings.png</file>
         <file>icons/p2p.png</file>
+        <file>icons/compose.png</file>
+        <file>icons/signature-small.png</file>
+        <file>icons/check-mark-small.png</file>
     </qresource>
 </RCC>
